# Sentiment-Radar

./: .dockerignore  Dockerfile  README.md  pyproject.toml
config/: settings.yaml
src/: generate_reports.py  graph_constructor.py  mapper.py
src/components/: analyse_sentiment.py  email_formatter.py  grade_generation.py  retrieve_news.py  schemas.py
src/prompts/: analyse_sentiment.py  email_formatter.py  grade_generation.py
